# blockchain

./: README.md
python/: .gitignore  pyproject.toml
python/src/main/: blockchain.py
python/src/main/app/: app.py
python/src/main/app/routes/: app.py  mining.py
python/src/main/app/services/: blockchain.py  proof.py  proof_of_work.py
