name = "blockchain"version = "0.0.1"description = "A Blockchain Python project"dependencies = [""][build-system]requires = ["setuptools"]build-backend = "setuptools.build_meta"[blockchain]readme = "README.md"requires-python = ">=3.12"license = { file = "LICENSE.txt" }keywords = ["blockchain"]authors = [{ name = "Sumit Kaushik", email = "sumitcomp31@gmail.com" }]maintainers = [{ name = "Sumit Kaushik", email = "sumitcomp31@gmail.com" }]